--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,27 +10,31 @@
         android:id="@+id/refresh_button"
         android:layout_width="217dp"
         android:layout_height="55dp"
-        android:text="REFRESH"
+        android:onClick="nextfact"
+        android:text="GET NEW FACT"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:onClick="nextfact"
-        app:layout_constraintVertical_bias="0.887" />
+        app:layout_constraintVertical_bias="0.878" />
 
     <TextView
         android:id="@+id/fact_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:layout_marginTop="50dp"
+        android:padding="5dp"
         android:layout_marginBottom="164dp"
         android:text="TextView"
         android:textAlignment="center"
+
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/refresh_button"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.699" />
+        app:layout_constraintVertical_bias="0.552" />
 </androidx.constraintlayout.widget.ConstraintLayout>
